# stateless_gallery

./: .gitignore  Cargo.toml  build.ps1  config.rs  example.yaml  gallery.rs  main.rs  template.rs  thumbnail.rs
src/: config.rs  dns.rs  gallery.rs  handlers.rs  main.rs  ssh_verify.rs  thumbnail.rs  watcher.rs
templates/: gallery.html
