[package]
name = "photo-gallery"
version = "0.2.0"
edition = "2021"
description = "A stateless multi-gallery photo server backed by a YAML config and a thumbnail cache"

[dependencies]
# Web server
axum       = "0.7"
tokio      = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

# Config & CLI
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Image processing
image      = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "webp", "gif", "bmp", "tiff",
    # Uncomment + install libdav1d-dev to enable AVIF decode/encode:
    "avif",
] }

# JPEG segment manipulation (gainmap / APP2 / EXIF preservation)
img-parts  = "0.3"
bytes      = "1"

# Filesystem watching (hot-reload on directory changes)
notify     = "6"

# File-system & utilities
walkdir    = "2"
base64     = "0.22"
sha2       = "0.10"
hex        = "0.4"
mime_guess = "2"

# Error handling & logging
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
