[package]
name = "stateless_gallery"
version = "0.2.0"
edition = "2024"
description = "A stateless multi-gallery photo server backed by a YAML config and a thumbnail cache"

[dependencies]
# Web server
axum       = "0.8"
tokio      = { version = "1.50", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Config & CLI
clap       = { version = "4", features = ["derive"] }
serde      = { version = "1", features = ["derive"] }
yaml_serde = "0.10"
serde_json = "1"

# Image processing
image      = { version = "0.25", default-features = true, features = [
    "jpeg", "png", "webp", "gif", "bmp", "tiff",
    "avif", "gif", "hdr", "pnm", "tga", "qoi",
    "ico", "exr", "ff",
    "serde", "rayon"
] }
image-extras = { version = "0.1", default-features = true }

# JPEG segment manipulation (gainmap / APP2 / EXIF preservation)
img-parts  = "0.4"
bytes      = "1"

# Filesystem watching (hot-reload on directory changes)
notify     = "8"

git2       = { version = "0.20.4", default-features = true, features = ["https", "ssh"] }

# File-system & utilities
walkdir    = "2"
base64     = "0.22"
sha2       = "0.10"
hex        = "0.4"
mime_guess = "2"

# Error handling & logging
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
trust-dns-resolver = "0.23"
